syntax = "proto3";

option go_package = "github.com/koliader/posts-gateway/internal/pb";
import "Entities.proto";

service Auth {
  rpc Register(RegisterReq) returns (AuthRes) {}
  rpc Login(LoginReq) returns (AuthRes) {}
  rpc ListUsers(Empty) returns (ListUsersRes) {}
}

message AuthRes {
  string Token = 1;
}

message RegisterReq {
  string Email = 1;
  string Username = 2;
  string Password = 3;
}

message LoginReq {
  string Email = 1;
  string Password = 2;
}

message ListUsersRes {
  repeated UserEntity users = 1;
}